feat: add destroy account user
